kubernetes/mini/apps/web/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: web
  labels:
    goldilocks.fairwinds.com/enabled: 'true'
annotations:
  kustomize.toolkit.fluxcd.io/prune: disabled
