kubernetes/mini/apps/web/networkpolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: default-deny
  namespace: web
spec:
  endpointSelector: {}
  ingress:
    - {}
  egress:
    - {}
